err/django-contentrelations.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/contentrelations'...
Compiling './lib/python3.5/site-packages/contentrelations/registration.py'...
***   File "./lib/python3.5/site-packages/contentrelations/registration.py", line 7
    print "%s already has an attribute named %s" % (model_class.__name__, name)
                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/contentrelations/related.py'...
***   File "./lib/python3.5/site-packages/contentrelations/related.py", line 169
    raise rel_obj.related_model.DoesNotExist, \
                                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/contentrelations/static'...
Listing './lib/python3.5/site-packages/contentrelations/static/contentrelations'...
Listing './lib/python3.5/site-packages/contentrelations/static/contentrelations/js'...
Listing './lib/python3.5/site-packages/contentrelations/templates'...
Listing './lib/python3.5/site-packages/contentrelations/templates/admin'...
Listing './lib/python3.5/site-packages/contentrelations/templates/admin/edit_inline'...
Listing './lib/python3.5/site-packages/contentrelations/templatetags'...
Listing './lib/python3.5/site-packages/django_contentrelations-1.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
